--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,23 +2,23 @@ name: check_delivery
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=2.18.5 <3.0.0'
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
-  get: 4.6.5
-  dropdown_search: ^5.0.5
-  http: 0.13.5
   dio: ^4.0.6
-  flutter: 
+  dropdown_search: ^5.0.5
+  flutter:
     sdk: flutter
+  get: 4.6.5
+  http: 0.13.5
+  shared_preferences: ^2.0.17
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
-
